@@ -54,6 +54,7 @@ Misc:
  - CMake: Add ability to just print version string
  - Qt: Merge "Save" and "OK" buttons in shader options
  - SDL: Automatically map controllers when plugged in
+ - Qt: Automatically load controller profile when plugged in
 
 0.5.2: (2016-12-31)
 Bugfixes:
